# datascience_cookiecutter

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project}}/: .gitignore  README.md  pyproject.toml  setup.py
{{cookiecutter.project}}/data/: README.md
{{cookiecutter.project}}/docs/: README.md  conf.py  index.rst
{{cookiecutter.project}}/src/: README.md
{{cookiecutter.project}}/src/{{cookiecutter.project_slug}}/: README.md
